# DatasetAnonymization

./: .env.example  .gitignore  README.md  data.csv  pyproject.toml
docs/: dataset-creation.md  dataset-manager.md  r4_r5.md
src/dataset_anonymization/: __init__.py  manager.py
src/dataset_creation/: __init__.py  creator.py
src/dataset_creation/required_data/: malagueños_por_generos.csv
src/interface/: __init__.py  app.py  app_dataset_creation.py
src/interface/ui_creation/: app_dataset_creation.py
src/interface/ui_creation/pages/: result.py
