[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset-anonymization"
version = "0.1.0"
description = "Dataset anonymization project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas",
    "python-dotenv",
    "streamlit",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_anonymization", "src/dataset_creation"]

[tool.uv]
dev-dependencies = []
